<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/all"
        android:id="@+id/all"/>

    <group android:checkableBehavior="single">
    <item android:title="Including:">
        <menu>
            <item android:title="@string/basic_syntax"
                android:id="@+id/id_basic_syntax"
                android:icon="@drawable/point"/>
            <item android:title="@string/idioms"
                android:id="@+id/id_idioms"
                android:icon="@drawable/point"/>
            <item android:title="@string/data_types"
                android:id="@+id/id_data_types"
                android:icon="@drawable/point"/>
            <item android:title="@string/conditions_loops"
                android:id="@+id/id_conditions_loops"
                android:icon="@drawable/point"/>
            <item android:title="@string/classes_objects"
                android:id="@+id/id_classes_objects"
                android:icon="@drawable/point"/>
            <item android:title="@string/functions"
                android:id="@+id/id_functions"
                android:icon="@drawable/point"/>
        </menu>
    </item>
    </group>
</menu>