<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="82dp"
    tools:layout_editor_absoluteY="137dp"
    android:background="@color/fon_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fon_gray"
        android:gravity="center"
        android:padding="30dp"
        tools:context=".ItemActivity">


        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:id="@+id/a_image"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:foregroundGravity="center_vertical"
            android:scaleType="fitStart"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/a_description"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/a_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:justificationMode="inter_word"
            android:text="@string/des"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/a_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/linkBtn"
            android:layout_width="214dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_states"
            android:onClick="getLink"
            android:shadowColor="@color/gray"
            android:text="@string/link"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_image"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>